<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="fill_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_titleFirstSetup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/title_first_setup"
                android:textColor="@color/white"
                android:textSize="35sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_exit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:visibility="invisible"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/desc_btn_exit"
                android:background="@drawable/square_rounded"
                android:src="@drawable/ic_exit"
                android:tint="@color/green_500" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_userImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_title">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_inputUserImage"
                android:layout_width="280dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:contentDescription="@string/desc_profile_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelAddImage"
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/text_add_image"
                android:textAlignment="center"
                android:textColor="@color/green_500"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_userImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/et_inputDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp"
            android:layout_marginTop="50dp"
            android:inputType="text"
            android:autofillHints="name"
            android:background="@drawable/square_rounded"
            android:fontFamily="@font/nunito_extrabold"
            android:textColorHint="@color/green_500"
            android:textColor="@color/green_500"
            android:hint="@string/hint_display_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_userImage" />

        <Button
            style="@style/Button"
            android:id="@+id/btn_startTracking"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            android:fontFamily="@font/nunito_extrabold"
            android:textAllCaps="false"
            android:text="@string/btn_start_tracking"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_inputDisplayName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>