<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingBottom="25dp"
        android:clipChildren="false"
        android:clipToPadding="false">

        <TextView
            android:id="@+id/txt_titleProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/title_profile"
            android:textColor="@color/green_600"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_userInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_titleProfile">

            <LinearLayout
                android:id="@+id/layout_userImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/square_rounded"
                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgUser"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:padding="10dp"
                    android:src="@drawable/shioriko"
                    app:shapeAppearanceOverlay="@style/imageBorderRadius"
                    app:strokeColor="@color/green_500"
                    app:strokeWidth="3.5dp" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/square_rounded"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layout_userImage"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_titleName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_extrabold"
                    android:text="@string/title_name"
                    android:textColor="@color/green_500"
                    android:textSize="17.5sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Space
                    android:id="@+id/space_titleName"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="2.5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_titleName"
                    app:layout_constraintLeft_toLeftOf="@id/txt_titleName"
                    app:layout_constraintRight_toRightOf="@id/txt_titleName" />

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_extrabold"
                    android:text="@string/placeholder_name"
                    android:textColor="@color/green_600"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space_titleName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/square_rounded"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layout_userImage">

                <TextView
                    android:id="@+id/txt_titleRoutine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_extrabold"
                    android:text="@string/title_routine"
                    android:textColor="@color/green_500"
                    android:textSize="17.5sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Space
                    android:id="@+id/space_titleRoutine"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="2.5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_titleRoutine"
                    app:layout_constraintLeft_toLeftOf="@id/txt_titleRoutine"
                    app:layout_constraintRight_toRightOf="@id/txt_titleRoutine" />

                <TextView
                    android:id="@+id/txt_routineCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_extrabold"
                    android:text="@string/placeholder_routineCount"
                    android:textColor="@color/green_600"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space_titleRoutine" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txt_titleAccuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/nunito_extrabold"
            android:text="@string/title_accuracy"
            android:textColor="@color/green_600"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_userInfo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_userSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_titleAccuracy">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_userAccuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/square_rounded"
                android:elevation="5dp"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:id="@+id/progress_accuracy"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="0"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/progress_accuracy"
                    app:layout_constraintEnd_toEndOf="@+id/progress_accuracy"
                    app:layout_constraintStart_toStartOf="@+id/progress_accuracy"
                    app:layout_constraintTop_toTopOf="@+id/progress_accuracy">

                    <TextView
                        android:id="@+id/txt_userAccuracy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_extrabold"
                        android:text="@string/placeholder_accuracy"
                        android:textColor="@color/green_500"
                        android:textSize="25sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <Space
                        android:id="@+id/space_userAccuracy"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintBottom_toBottomOf="@+id/txt_userAccuracy"
                        app:layout_constraintLeft_toLeftOf="@id/txt_userAccuracy"
                        app:layout_constraintRight_toRightOf="@id/txt_userAccuracy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-20dp"
                        android:fontFamily="@font/nunito_extrabold"
                        android:text="@string/label_userAccuracy"
                        android:textColor="@color/green_500"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/space_userAccuracy" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/square_rounded"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layout_userAccuracy"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txt_titleOnTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_extrabold"
                    android:text="@string/title_onTime"
                    android:textColor="@color/green_500"
                    android:textSize="17.5sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Space
                    android:id="@+id/space_titleOnTime"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="2.5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_titleOnTime"
                    app:layout_constraintLeft_toLeftOf="@id/txt_titleOnTime"
                    app:layout_constraintRight_toRightOf="@id/txt_titleOnTime" />

                <TextView
                    android:id="@+id/txt_onTimeCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_extrabold"
                    android:text="@string/placeholder_onTimeCount"
                    android:textColor="@color/green_600"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space_titleOnTime" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/square_rounded"
                android:elevation="5dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/layout_userAccuracy">

                <TextView
                    android:id="@+id/txt_titleLate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_extrabold"
                    android:text="@string/title_late"
                    android:textColor="@color/green_500"
                    android:textSize="17.5sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Space
                    android:id="@+id/space_titleLate"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="2.5dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_titleLate"
                    app:layout_constraintLeft_toLeftOf="@id/txt_titleLate"
                    app:layout_constraintRight_toRightOf="@id/txt_titleLate" />

                <TextView
                    android:id="@+id/txt_lateCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_extrabold"
                    android:text="@string/placeholder_lateCount"
                    android:textColor="@color/green_600"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/space_titleLate" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- TO ALLOW SPACE BETWEEN NAVIGATION BAR -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="105dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_userSummary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>